# opencv-benches

./: .gitattributes  .gitignore  CMakeLists.txt  Justfile  LICENSE  README.md  devenv.nix
.github/workflows/: codspeed.yml
assets/: haarcascade_frontalcatface.xml
src/: classifier.cpp  color.cpp  color_conversion.cpp  edge_detection.cpp  filter.cpp  fixtures.hpp  image.cpp  main.cpp  read_image.cpp  transform.cpp
